tests/sksl/errors/golden/ArrayReturnTypes.glsl
### Compilation failed:

error: 1: functions may not return type 'float4x4[2]'
error: 2: functions may not return type 'int[1]'
2 errors
